--- a/app/views/student_cards/index.html.erb
+++ b/app/views/student_cards/index.html.erb
@@ -1,24 +1,20 @@
-<p id="notice"><%= notice %></p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Abcenglishbook</title>
+    <%= csrf_meta_tags %>
 
-<h1>Student Cards</h1>
-<link rel="stylesheet" type="text/css" href="app/stylesheets/style.scss">
-<table>
-  <!--<thead>
-    <tr>
-      <th>User name</th>
-      <th>Password</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>-->
-  <!--==================================codigo DiegoALto=====================================-->
-    
-  <div id="main" class="row valign-wrapper">
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+  </head>
+
+  <body>
+    <div id="main" class="row valign-wrapper">
     <div class="col s6">
       <div class="slider">
         <ul class="slides">
           <li>
-           <!--  <img src="assets/i1.jpg"> random image -->
-           <img src="<%= asset_path 'i1.jpg' %>">
+            <img src="<%= asset_path 'i1.jpg' %>">
             <div class="caption center-align">
               <h3 class="blue-text"> </h3>
               <h5 class="light blue-text text-lighten-3"> </h5>
@@ -45,8 +41,6 @@
       <div class="row no-pm">
       </div>
       <div class="card-content">
-        <!--<img src="assets/sidet.png">
-        <img src="assets/sidet.png">-->
         <img src="<%= asset_path 'sidet.png' %>">
         <div class="row">
           <div class="input-field col s12">
@@ -67,7 +61,9 @@
         </div>
       </div>
     </div>
-    </div>
+    <script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="js/materialize.min.js"></script>
+    <script src="js/init.js"></script>
     <script type="text/javascript">
       $('#main').css('height','100vh');
       $('#login').click(function(){
@@ -86,20 +82,16 @@
         }
       });
     </script>
-    <!--========================================================================================-->
-  <tbody>
-    <% @student_cards.each do |student_card| %>
-      <tr>
-        <td><%= student_card.user_name %></td>
-        <td><%= student_card.password %></td>
-        <td><%= link_to 'Show', student_card %></td>
-        <td><%= link_to 'Edit', edit_student_card_path(student_card) %></td>
-        <td><%= link_to 'Destroy', student_card, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+     <script>
+        $(document).ready(function(){
+        $('.slider').slider();
+    });
+     </script>
+    <%= yield %>
+  </body>
+</html>
 
-<br>
 
-<%= link_to 'New Student Card', new_student_card_path %>
+
+
+
