--- a/app/views/student_cards/index.html.erb
+++ b/app/views/student_cards/index.html.erb
@@ -11,7 +11,8 @@
   <body>
     <div id="main" class="row valign-wrapper">
     <div class="col s6">
-      <div class="slider">
+       <img  width="450" src="<%= asset_path 'pag_17.png' %>">
+      <!-- <div class="slider">
         <ul class="slides">
           <li>
             <img src="<%= asset_path 'i1.jpg' %>">
@@ -35,7 +36,7 @@
             </div>
           </li>
         </ul>
-      </div>
+      </div> -->
     </div>
     <div class="col s3 valign card" style="margin-right: 5em;">
       <div class="row no-pm">
@@ -44,12 +45,12 @@
         <img src="<%= asset_path 'sidet.png' %>">
         <div class="row">
           <div class="input-field col s12">
-            <i class="material-icons prefix">person</i>
+            <!-- <i class="material-icons prefix">person</i> -->
             <input id="user" type="text" class="validate">
-            <label for="user">Username</label>
-          </div>
+            <!-- <label for="user">Username</label> -->
+            </div>
           <div class="input-field col s12">
-            <i class="material-icons prefix">vpn_key</i>
+            <!-- <i class="material-icons prefix">vpn_key</i> -->
             <input id="pass" type="password" class="validate">
             <label for="pass">Password</label>
           </div>
@@ -61,8 +62,8 @@
         </div>
       </div>
     </div>
-    <script type="text/javascript" src="js/jquery.js"></script>
-    <script type="text/javascript" src="js/materialize.min.js"></script>
+    <!-- <script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="js/materialize.min.js"></script> -->
     <script src="js/init.js"></script>
     <script type="text/javascript">
       $('#main').css('height','100vh');
@@ -85,6 +86,8 @@
      <script>
         $(document).ready(function(){
         $('.slider').slider();
+        $('.materialboxed').materialbox();
+  
     });
      </script>
     <%= yield %>
