add link to image side.png

--- a/app/views/student_cards/index.html.erb
+++ b/app/views/student_cards/index.html.erb
@@ -43,7 +43,7 @@
       <div class="row no-pm">
       </div>
       <div class="card-content">
-        <img src="img/sidet.png">
+        <img <%= link_to image_tag('sidet.png') %> >
         <div class="row">
           <div class="input-field col s12">
             <i class="material-icons prefix">person</i>
