modifiq slider image add 3 link imagen

--- a/app/views/student_cards/index.html.erb
+++ b/app/views/student_cards/index.html.erb
@@ -16,21 +16,21 @@
       <div class="slider">
         <ul class="slides">
           <li>
-            <img src="img/i1.jpg"> <!-- random image -->
+            <%= link_to image_tag('i1.jpg"') %> <!-- random image -->
             <div class="caption center-align">
               <h3 class="blue-text"> </h3>
               <h5 class="light blue-text text-lighten-3"> </h5>
             </div>
           </li>
           <li>
-            <img src="img/i2.jpg"> <!-- random image -->
+             <%= link_to image_tag('i2.jpg"') %> <!-- random image -->
             <div class="caption left-align">
               <h3 class="blue-text"> </h3>
               <h5 class="light blue-text text-lighten-3"> </h5>
             </div>
           </li>
           <li>
-            <img src="img/pag_17.png"> <!-- random image -->
+            <%= link_to image_tag('pag_17.png') %><!-- random image -->
             <div class="caption right-align">
               <h3 class="blue-text"> </h3>
               <h5 class="light blue-text text-lighten-3"> </h5>
