add codigo js and ul<li> at index of view login

--- a/app/views/login/index.html.erb
+++ b/app/views/login/index.html.erb
@@ -1,2 +1,14 @@
 <h1>Login#index</h1>
 <p>Find me in app/views/login/index.html.erb</p>
+<script type="text/javascript">
+	$(document).ready(function(){
+	  $('.bxslider').bxSlider();
+	});
+ </script>
+
+<ul class="bxslider">
+  <li> <%= link_to image_tag('i1.jpg') %> </li>
+  <li> <%= link_to image_tag('i2.jpg') %> </li>
+  <li> <%= link_to image_tag('i3.png') %> </li>
+  <li> <%= link_to image_tag('girls.png') %> </li>
+</ul>
