slider ok end up in view login

--- a/app/views/login/index.html.erb
+++ b/app/views/login/index.html.erb
@@ -2,12 +2,15 @@
 <p>Find me in app/views/login/index.html.erb</p>
 <script type="text/javascript">
 	$(document).ready(function(){
-	  $('.bxslider').bxSlider();
+	  $('.bxslider').bxSlider({
+	  	adaptiveHeight: true,
+	  	auto: true,
+	  });
 	});
  </script>
 
 <ul class="bxslider">
-  <li> <%= link_to image_tag('i1.jpg') %> </li>
+  <li> <%= link_to image_tag('i1.jpg') %>  </li>
   <li> <%= link_to image_tag('i2.jpg') %> </li>
   <li> <%= link_to image_tag('i3.png') %> </li>
   <li> <%= link_to image_tag('girls.png') %> </li>
