center of imagen in slider ok

--- a/app/views/login/index.html.erb
+++ b/app/views/login/index.html.erb
@@ -10,8 +10,19 @@
  </script>
 
 <ul class="bxslider">
-  <li> <%= link_to image_tag('i1.jpg') %>  </li>
-  <li> <%= link_to image_tag('i2.jpg') %> </li>
-  <li> <%= link_to image_tag('i3.png') %> </li>
-  <li> <%= link_to image_tag('girls.png') %> </li>
+  <li> 
+  	<div align="center"> <%= link_to image_tag('i1.jpg') %>  	</div>  
+  </li>
+  <li> 
+  	<div align="center"> <%= link_to image_tag('i2.jpg') %> </div>  
+  </li>
+  <li> 
+  	<div align="center"> <%= link_to image_tag('i3.png') %> </div> 
+  </li>
+  <li> 
+  	<div align="center"> <%= link_to image_tag('girls.png') %> </div> 
+  </li>
+  <li> 
+  	<div align="center"> <%= image_tag('girls.png') %> </div> 
+  </li> 
 </ul>
