--- a/app/views/student_cards/index.html.erb
+++ b/app/views/student_cards/index.html.erb
@@ -1,91 +1,31 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8" />
-  <!--Import materialize.css-->
-  <link type="text/css" rel="stylesheet" href="css/materialize.min.css"
-  media="screen,projection" />
-
-  <!--Let browser know website is optimized for mobile-->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link type="text/css" rel="stylesheet" href="css/style.css" />
-</head>
-<body class="no-scroll">
-  <div id="main" class="row valign-wrapper">
-    <div class="col s6">
-      <div class="slider">
-        <ul class="slides">
-          <li>
-            <%= link_to image_tag('i1.jpg"') %> <!-- random image -->
-            <div class="caption center-align">
-              <h3 class="blue-text"> </h3>
-              <h5 class="light blue-text text-lighten-3"> </h5>
-            </div>
-          </li>
-          <li>
-             <%= link_to image_tag('i2.jpg"') %> <!-- random image -->
-            <div class="caption left-align">
-              <h3 class="blue-text"> </h3>
-              <h5 class="light blue-text text-lighten-3"> </h5>
-            </div>
-          </li>
-          <li>
-            <%= link_to image_tag('pag_17.png') %><!-- random image -->
-            <div class="caption right-align">
-              <h3 class="blue-text"> </h3>
-              <h5 class="light blue-text text-lighten-3"> </h5>
-            </div>
-          </li>
-        </ul>
-      </div>
-    </div>
-    <div class="col s3 valign card" style="margin-right: 5em;">
-      <div class="row no-pm">
-      </div>
-      <div class="card-content">
-        <img <%= link_to image_tag('sidet.png') %> >
-        <div class="row">
-          <div class="input-field col s12">
-            <i class="material-icons prefix">person</i>
-            <input id="user" type="text" class="validate">
-            <label for="user">Username</label>
-          </div>
-          <div class="input-field col s12">
-            <i class="material-icons prefix">vpn_key</i>
-            <input id="pass" type="password" class="validate">
-            <label for="pass">Password</label>
-          </div>
-          <div class="col s12 m12 l12">
-            <a id="login" 
-            class="btn waves-effect waves-light"
-            style="background:#2196F3;">Log in</a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <script type="text/javascript" src="js/jquery.js"></script>
-    <script type="text/javascript" src="js/materialize.min.js"></script>
-    <script src="js/init.js"></script>
     <script type="text/javascript">
-      $('#main').css('height','100vh');
-      $('#login').click(function(){
-        var user,pass;
-        user=$('#user').val();
-        pass=$('#pass').val();
-        if(user=='' | pass==''){
-          show('Alguno de los campos esta vac&iacute;o');
-        }else{
-          if(user=='admin' && pass=='admin'){
-          show('Bienvenido a Sidet');
-          redirect('dashboard.html');
-        }else{
-          show('Usuario inv&aacute;lido');
-        }
-        }
+      $(document).ready(function(){
+        $('.bxslider').bxSlider({
+        auto: true,
+        });
       });
     </script>
-  </body>
-</html>
+    
+    
+    <div class="col-md-6">
+          <ul class="bxslider">
+              <li> 
+                <div align="center"> <%= link_to image_tag('i1.jpg') %>   </div>  
+              </li>
+              <li> 
+                <div align="center"> <%= link_to image_tag('i2.jpg') %> </div>  
+              </li>
+              <li> 
+                <div align="center"> <%= link_to image_tag('i3.png') %> </div> 
+              </li>
+              <li> 
+                <div align="center"> <%= link_to image_tag('girls.png') %> </div> 
+              </li>
+              <li> 
+                <div align="center"> <%= image_tag('girls.png') %> </div> 
+              </li> 
+          </ul>
+    </div>
 
 
 
