--- a/app/views/student_cards/index.html.erb
+++ b/app/views/student_cards/index.html.erb
@@ -1,6 +1,14 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Student_card</h1>
+<% if student_signed_in? %>
+    <p> BIENVENIDO <%=current_student.user_name%></p>
+    <%= link_to "cerrar session",destroy_student_session_path,method: :delete %>
+<% else %>
+    <%= link_to "crea una cuenta", new_student_registration_path%>
+    <%= link_to "ya tienes una cuenta",new_student_session_path %>
+<% end %>
+
 
    
 
