--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,27 +3,27 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-    <div class="field">
+    <div class="input-field">
       <%= f.label :name %><br />
       <%= f.text_field :name %><br />
     </div>
 
-    <div class="field">
+    <div class="input-field">
       <%= f.label :last_name %><br />
       <%= f.text_field :last_name %>
     </div>
 
-    <div class="field">
+    <div class="input-field">
       <%= f.label :user_name %><br />
       <%= f.text_field :user_name %>
     </div>
 
-  <div class="field">
+  <div class="input-field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true %>
   </div>
 
-  <div class="field">
+  <div class="input-field">
     <%= f.label :password %>
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
@@ -31,12 +31,12 @@
     <%= f.password_field :password, autocomplete: "off" %>
   </div>
 
-  <div class="field">
+  <div class="input-field">
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
 
-  <div class="actions">
+  <div class="btn waves-effect waves-light" >
     <%= f.submit "Sign up" %>
   </div>
 <% end %>
