dando estilo con materialize

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,4 +15,6 @@
  *= require bxslider
  */
  @import "materialize";
- //= require materialize-sprockets
+//= require jquery
+//= require materialize-sprockets
+//= require material_icons
