--- a/app/views/students/registrations/new.html.erb
+++ b/app/views/students/registrations/new.html.erb
@@ -1,49 +1,62 @@
 <h2>Sign up</h2>
-
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
-
-    <div class="file-field">
-      <%= f.label :image %><br />
-      <%= f.file_field :image %><br />
+ <form class="col s12">
+   <div class="row">
+    <div class="file-field ">
+     <i class="material-icons">face</i>
+     <%= f.label :image %><br />
+     <%= f.file_field :image %><br />
     </div>
+   </div>
+   <div class="row">
+     <div class="input-field col s6">
+       <i class="material-icons ">account_circle</i>
+       <%= f.label :name %><br />
+       <%= f.text_field :name %><br />
+     </div>
 
-    <div class="input-field">
-      <%= f.label :name %><br />
-      <%= f.text_field :name %><br />
-    </div>
+     <div class="input-field col s6">
+       <%= f.label :last_name %><br />
+       <%= f.text_field :last_name %>
+     </div>
+   </div>
 
-    <div class="input-field">
-      <%= f.label :last_name %><br />
-      <%= f.text_field :last_name %>
-    </div>
 
-    <div class="input-field">
-      <%= f.label :user_name %><br />
-      <%= f.text_field :user_name %>
-    </div>
+   <div class="input-field">
+     <%= f.label :user_name %><br />
+     <%= f.text_field :user_name %>
+   </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
+   <div class="field">
+     <i class="material-icons">contact_mail</i>
+     <%= f.label :email %><br />
+     <%= f.email_field :email, autofocus: true %>
+   </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
+   <div class="field">
+     <i class="material-icons">lock</i>
+     <%= f.label :password %>
+     <% if @minimum_password_length %>
+         <em>(<%= @minimum_password_length %> characters minimum)</em>
+     <% end %><br />
+     <%= f.password_field :password, autocomplete: "off" %>
+   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
+   <div class="field">
+     <i class="material-icons">lock</i>
+     <%= f.label :password_confirmation %><br />
+     <%= f.password_field :password_confirmation, autocomplete: "off" %>
+   </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
+   <div class="actions btn waves-effect waves-light">
+     <i class="material-icons right">send</i>
+     <%= f.submit "Sign up" %>
+   </div>
+ </form>
+ <
 <% end %>
 
 <%= render "students/shared/links" %>
