--- a/app/views/students/dashboard.html.erb
+++ b/app/views/students/dashboard.html.erb
@@ -3,26 +3,190 @@
         $(".button-collapse").sideNav();
     });
 </script>
+<div class="navbar-fixed ">
+  <nav>
+    <div class="nav-wrapper blue">
+      <a href="#!" class="brand-logo">Logo</a>
+      <!--<ul class="right hide-on-med-and-down">
+        <li><a href="sass.html">Sass</a></li>
+        <li><a href="badges.html">Components</a></li>
+      </ul>-->
+    </div>
+  </nav>
+</div>
 
+<!--boton flotante  -->
+<ul id="slide-out" class=" side-nav" >
+  <li><div class="userView">
+    <div class="background">
+      <img src="<%= asset_path 'office.jpg' %>"  >
+    </div>
+    <a href="#!user"><img class="circle" src=" <%= asset_path 'office.jpg' %> " ></a>
+    <a href="#!name"><span class="white-text name">John Doe</span></a>
+    <a href="#!email"><span class="white-text email">jdandturk@gmail.com</span></a>
+  </div></li>
+  <li><a href="#!"><i class="material-icons">cloud</i>First Link With Icon</a></li>
+  <li><a href="#!">Second Link</a></li>
+  <li><div class="divider"></div></li>
+  <li><a class="subheader">Subheader</a></li>
+  <li><a class="waves-effect" href="#!">Third Link With Waves</a></li>
+</ul>
+<div class="left fixed-action left ">
+<a href="#" data-activates="slide-out" class=" btn-floating button-collapse left"><i class="material-icons">menu</i></a>
+</div>
+  <!--boton flotante  -->
 
+<div class="container">
+  <div id="card-stats">
+    <div class="row">
+      <div class="col s12 m6 l3">
+        <div class="card ">
+          <div  onclick="redirect('template.html')">
+            <i class=" col l12 m12 large material-icons white-text" style="background: #F44336;">home</i>
+            <div class="row no-pm left-align" style="margin-left: 0.5em;">
+              <b class="no-pm" style="font-size: 1.15em;">Book 1</b>
+            </div>
+            <div class="row no-pm left-align" style="margin-left: -0.25em;">
+              <b class="col s6 no-pm">Nivel</b>
+              <span class="col s6 no-pm" style="color: #808080;">Básico</span>
+            </div>
+            <div class="row no-pm left-align" style="margin-left: -0.25em;margin-bottom: 0.25em;">
+              <b class="col s6 no-pm">Progreso</b>
+              <span class="col s6 no-pm" style="color: #808080;">0%</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col s12 m6 l3">
+        <div class="card">
+          <div >
+            <i class=" col l12 m12 large material-icons white-text" style="background: #009688;">home</i>
+            <div class="row no-pm left-align" style="margin-left: 0.5em;">
+              <b class="no-pm" style="font-size: 1.15em;">Book 2</b>
+            </div>
+            <div class="row no-pm left-align" style="margin-left: -0.25em;">
+              <b class="col s6 no-pm">Nivel</b>
+              <span class="col s6 no-pm" style="color: #808080;">Básico</span>
+            </div>
+            <div class="row no-pm left-align" style="margin-left: -0.25em;margin-bottom: 0.25em;">
+              <b class="col s6 no-pm">Progreso</b>
+              <span class="col s6 no-pm" style="color: #808080;">0%</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col s12 m6 l3">
+        <div class="card">
+          <div >
+            <i class=" col l12 m12 large material-icons white-text" style="background: #FFEB3B;">home</i>
+            <div class="row no-pm left-align" style="margin-left: 0.5em;">
+              <b class="no-pm" style="font-size: 1.15em;">Book 3</b>
+            </div>
+            <div class="row no-pm left-align" style="margin-left: -0.25em;">
+              <b class="col s6 no-pm">Nivel</b>
+              <span class="col s6 no-pm" style="color: #808080;">Básico</span>
+            </div>
+            <div class="row no-pm left-align" style="margin-left: -0.25em;margin-bottom: 0.25em;">
+              <b class="col s6 no-pm">Progreso</b>
+              <span class="col s6 no-pm" style="color: #808080;">0%</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col s12 m6 l3">
+        <div class="card">
+          <div >
+            <i class=" col l12 m12 large material-icons white-text" style="background: #E91E63;">home</i>
+            <div class="row no-pm left-align" style="margin-left: 0.5em;">
+              <b class="no-pm" style="font-size: 1.15em;">Book 4</b>
+            </div>
+            <div class="row no-pm left-align" style="margin-left: -0.25em;">
+              <b class="col s6 no-pm">Nivel</b>
+              <span class="col s6 no-pm" style="color: #808080;">Intermedio</span>
+            </div>
+            <div class="row no-pm left-align" style="margin-left: -0.25em;margin-bottom: 0.25em;">
+              <b class="col s6 no-pm">Progreso</b>
+              <span class="col s6 no-pm" style="color: #808080;">0%</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
-
-
-<nav>
-  <div class="nav-wrapper">
-    <a href="#!" class="brand-logo">Logo</a>
-    <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-    <ul class="right hide-on-med-and-down">
-      <li><a href="sass.html">Sass</a></li>
-      <li><a href="badges.html">Components</a></li>
-      <li><a href="collapsible.html">Javascript</a></li>
-      <li><a href="mobile.html">Mobile</a></li>
-    </ul>
-    <ul class="side-nav" id="mobile-demo">
-      <li><a href="sass.html">Sass</a></li>
-      <li><a href="badges.html">Components</a></li>
-      <li><a href="collapsible.html">Javascript</a></li>
-      <li><a href="mobile.html">Mobile</a></li>
-    </ul>
+    <div class="row">
+      <div class="col s12 m6 l3">
+        <div class="card ">
+          <div  onclick="redirect('template.html')">
+            <i class=" col l12 m12 large material-icons white-text" style="background: #F44336;">home</i>
+            <div class="row no-pm left-align" style="margin-left: 0.5em;">
+              <b class="no-pm" style="font-size: 1.15em;">Book 1</b>
+            </div>
+            <div class="row no-pm left-align" style="margin-left: -0.25em;">
+              <b class="col s6 no-pm">Nivel</b>
+              <span class="col s6 no-pm" style="color: #808080;">Básico</span>
+            </div>
+            <div class="row no-pm left-align" style="margin-left: -0.25em;margin-bottom: 0.25em;">
+              <b class="col s6 no-pm">Progreso</b>
+              <span class="col s6 no-pm" style="color: #808080;">0%</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col s12 m6 l3">
+        <div class="card">
+          <div >
+            <i class=" col l12 m12 large material-icons white-text" style="background: #009688;">home</i>
+            <div class="row no-pm left-align" style="margin-left: 0.5em;">
+              <b class="no-pm" style="font-size: 1.15em;">Book 2</b>
+            </div>
+            <div class="row no-pm left-align" style="margin-left: -0.25em;">
+              <b class="col s6 no-pm">Nivel</b>
+              <span class="col s6 no-pm" style="color: #808080;">Básico</span>
+            </div>
+            <div class="row no-pm left-align" style="margin-left: -0.25em;margin-bottom: 0.25em;">
+              <b class="col s6 no-pm">Progreso</b>
+              <span class="col s6 no-pm" style="color: #808080;">0%</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col s12 m6 l3">
+        <div class="card">
+          <div >
+            <i class=" col l12 m12 large material-icons white-text" style="background: #FFEB3B;">home</i>
+            <div class="row no-pm left-align" style="margin-left: 0.5em;">
+              <b class="no-pm" style="font-size: 1.15em;">Book 3</b>
+            </div>
+            <div class="row no-pm left-align" style="margin-left: -0.25em;">
+              <b class="col s6 no-pm">Nivel</b>
+              <span class="col s6 no-pm" style="color: #808080;">Básico</span>
+            </div>
+            <div class="row no-pm left-align" style="margin-left: -0.25em;margin-bottom: 0.25em;">
+              <b class="col s6 no-pm">Progreso</b>
+              <span class="col s6 no-pm" style="color: #808080;">0%</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col s12 m6 l3">
+        <!--card   -->
+        <!--card
+        <div class="card">
+          <div class="card-image waves-effect waves-block waves-light">
+            <img class="activator" src="images/office.jpg">
+          </div>
+          <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
+            <p><a href="#">This is a link</a></p>
+          </div>
+          <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+          </div>
+        </div>
+        -->
+        <!--end card   -->
+      </div>
+    </div>
   </div>
-</nav>
+</div>
