--- a/app/views/students/dashboard.html.erb
+++ b/app/views/students/dashboard.html.erb
@@ -3,6 +3,7 @@
         $(".button-collapse").sideNav();
     });
 </script>
+<!--nav var fixed  -->
 <div class="navbar-fixed ">
   <nav>
     <div class="nav-wrapper blue">
@@ -14,6 +15,7 @@
     </div>
   </nav>
 </div>
+<!--end nav var fixed  -->
 
 <!--boton flotante  -->
 <ul id="slide-out" class=" side-nav" >
@@ -34,7 +36,7 @@
 <div class="left fixed-action left ">
 <a href="#" data-activates="slide-out" class=" btn-floating button-collapse left"><i class="material-icons">menu</i></a>
 </div>
-  <!--boton flotante  -->
+  <!--end boton flotante  -->
 
 <div class="container">
   <div id="card-stats">
