--- a/app/views/students/registrations/new.html.erb
+++ b/app/views/students/registrations/new.html.erb
@@ -73,6 +73,18 @@
           <div class="row">
             <form class="col s12">
               <div class="row">
+                <div class="input-field  col s12 ">
+                  <%= f.label :name %>
+                  <%= f.text_field :name ,class:"active validate"%>
+                </div>
+              </div>
+              <div class="row">
+                <div class="input-field  col s12 ">
+                  <%= f.label :last_name %>
+                  <%= f.text_field :last_name ,class:"active validate"%>
+                </div>
+              </div>
+              <div class="row">
                 <!--<div class="input-field col s12">
                   <input placeholder="John Doe" id="name2" type="text">
                   <label for="first_name" class="active">Name</label>
