--- a/app/views/students/registrations/new.html.erb
+++ b/app/views/students/registrations/new.html.erb
@@ -75,13 +75,25 @@
               <div class="row">
                 <div class="input-field  col s12 ">
                   <%= f.label :name %>
-                  <%= f.text_field :name ,class:"active validate"%>
+                  <%= f.text_field :name, autofocus: true ,class:"active validate"%>
                 </div>
               </div>
               <div class="row">
                 <div class="input-field  col s12 ">
                   <%= f.label :last_name %>
-                  <%= f.text_field :last_name ,class:"active validate"%>
+                  <%= f.text_field :last_name , autofocus: true  ,class:"active validate"%>
+                </div>
+              </div>
+              <div class="row">
+                <div class="input-field col s12">
+                  <%= f.label :phone %><br />
+                  <%= f.text_field :phone, autofocus: true, class:"active validate" %>
+                </div>
+              </div>
+              <div class="row">
+                <div class="input-field col s12">
+                  <%= f.label :address %><br />
+                  <%= f.text_field :address, autofocus: true, class:"active validate" %>
                 </div>
               </div>
               <div class="row">
