--- a/app/views/students/dashboard.html.erb
+++ b/app/views/students/dashboard.html.erb
@@ -34,9 +34,9 @@
     <div class="background">
       <img src="<%= asset_path 'office.jpg' %>"  >
     </div>
-    <a href="#!user"><img class="circle" src=" <%= asset_path 'office.jpg' %> " ></a>
-    <a href="#!name"><span class="white-text name">John Doe</span></a>
-    <a href="#!email"><span class="white-text email">jdandturk@gmail.com</span></a>
+    <a href="#!user"><img class="circle" src=" <%=  current_student.get_base64_image %> " ></a>
+    <a href="#!name"><span class="white-text name"><%=current_student.user_name%></span></a>
+    <a href="#!email"><span class="white-text email"><%=current_student.email%></span></a>
   </div></li>
   <li><a href="#!"><i class="material-icons">cloud</i>First Link With Icon</a></li>
   <li><a href="#!">Second Link</a></li>
