repair error code error

--- a/app/views/students/registrations/new.html.erb
+++ b/app/views/students/registrations/new.html.erb
@@ -99,7 +99,7 @@
       var inputPhone=document.getElementById("student_phone");
       var messageError5="solo se permite numeros";
       var messageError6="numero no valido";
-      if (isNaN(inputPhone.value){
+      if (isNaN(inputPhone.value)){
           alert(messageError5);
           aux= false
       }
